# lbann

./: .astylerc  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  README_LLNL.txt  README_coding_style.txt  ReleaseNotes.txt  TASKLIST.md  aluminum.hpp  data_reader.py  data_reader_communication_pb2.py  generateDocumentationAndDeploy.sh  helper.py  index.html  lbann_iwyu_mapping.imp  lbann_license_template.txt  lbann_license_template_cxx.txt  lbann_license_template_octothorpe.txt  test_numpy_conduit_cache.cpp
core-driver/: CMakeLists.txt  main.cpp  run.sh
data_utils/hdf5/: CMakeLists.txt  generate_HDF5_schema_and_sample_list.cpp  generate_schema_and_sample_list.cpp  helpers.cpp  helpers.hpp  test_helpers.cpp  test_main.cpp
docs/: BuildRSTDocs.py  BuildingLBANN.md  BuildingLBANNWithCMake.md  CMakeLists.txt  Doxyfile.in  Makefile  README  README.md  RSTDocsFlavorText.py  RTDDoxyfile  RunningLBANN.md  SourceTreeDoxyfile  build_containers.rst  build_llnl_idiosyncracies.rst  build_osx.rst  build_spack_extra_config.rst  build_with_cmake.rst  build_with_superbuild.rst  building_lbann.rst  callbacks.rst  conf.py  continuous_integration.rst  data_buffers.rst  data_ingestion.rst  data_readers.rst  data_store.rst  data_transforms.rst  developer_guide.dox  documentation_building.rst  execution_algorithms.rst  getting_started.dox  getting_started.rst  hyperparameter_tuning.rst  index.rst  io.rst  io_utils.rst  jit_compiled_layers.rst  layers.rst  lbann-api.rst  lbann.rst  (+23 more)
docs/aux/: hdf5_reader.rst
docs/bib/: Dryden2016.rst  Dryden2018.rst  Dryden2019channel.rst  Dryden2019spatial.rst  Jacobs2017.rst  Jacobs2019.rst  Liu2019.rst  VanEssen2015.rst  dryden2019.rst
docs/callbacks/: export_onnx.rst  mlperf_logging.rst  progress_bar.rst  summarize_images.rst
docs/data_ingestion/: hdf5_data_reader.rst  hdf5_data_reader_extended.rst  hdf5_generate_schema_and_sample_list.rst  relationships.odg  sample-list.odg  sample_lists.rst  transference.odg  yaml.odg
docs/execution_algorithms/: batched_inference.rst  batched_iterative_optimization.rst  kfac.rst  ltfb.rst
docs/layers/: activation_layers.rst  image_layers.rst  io_layers.rst  layer_args.rst  learning_layers.rst  loss_layers.rst  math_layers.rst  miscellaneous_layers.rst  operator_layer.rst  operator_layers.rst  regularization_layers.rst  transform_layers.rst
include/lbann/: CMakeLists.txt  Elemental_extensions.hpp  base.hpp  comm.hpp  comm_impl.hpp  comm_nb_request.hpp  datatype.hpp  detect_El_mpi.hpp  lbann.hpp  lbann_Elemental_extensions.h  lbann_Elemental_extensions.hpp  lbann_base.hpp  lbann_base_factory.hpp  lbann_comm.hpp  lbann_library.hpp  lbann_params.hpp  lbann_stl.hpp  params.hpp
model_zoo/: CMakeLists.txt  README.md  alexnet.cpp  alexnet_cv.cpp  autoencoder_cifar10.cpp  autoencoder_mnist.cpp  autoencoder_syntheticdata.cpp  cnn_mnist.cpp  collective_test.cpp  comm_test.cpp  dnn_cifar10.cpp  dnn_imagenet.cpp  dnn_mnist.cpp  dnn_multi_imagenet.cpp  dnn_multi_mnist.cpp  dnn_nci.cpp  dnn_nci_regression.cpp  greedy_layerwise_autoencoder_imagenet.cpp  greedy_layerwise_autoencoder_mnist.cpp  greedy_layerwise_autoencoder_nci.cpp  greedy_layerwise_autoencoder_synthetic_data.cpp  lbann.cpp  lbann2.cpp  lbann_aecycgan.cpp  lbann_alexnet.cpp  lbann_alexnet_cv.cpp  lbann_allreduce_bm.cpp  lbann_autoencoder_cifar10.cpp  lbann_autoencoder_mnist.cpp  lbann_autoencoder_syntheticdata.cpp  lbann_cnn_mnist.cpp  lbann_collective_test.cpp  lbann_comm_test.cpp  lbann_cycgan.cpp  lbann_dnn_cifar10.cpp  lbann_dnn_imagenet.cpp  lbann_dnn_mnist.cpp  lbann_dnn_mnist_proto.cpp  lbann_dnn_multi_imagenet.cpp  lbann_dnn_multi_imagenet_cv.cpp  (+28 more)
model_zoo/cosmoflow/: README.md  cosmoflow.py
model_zoo/data_readers/: data_reader_ascii.prototext  data_reader_candle_pilot1.prototext  data_reader_candle_pilot1_combo.prototext  data_reader_candle_pilot1_gdc.prototext  data_reader_candle_pilot1_growth.prototext  data_reader_candle_pilot2.prototext  data_reader_candle_pilot2_6k.prototext  data_reader_cifar10.prototext  data_reader_external.prototext  data_reader_imagenet.prototext  data_reader_imagenet_lassen.prototext  data_reader_jag.prototext  data_reader_mnist.prototext  data_reader_mnist_numpy_npz_int16.prototext  data_reader_moving_mnist.prototext  data_reader_nci.prototext  data_reader_nci.prototext.bve  data_reader_synthetic.prototext  data_reader_synthetic_cosmoflow_128.prototext  data_reader_synthetic_imagenet.prototext
model_zoo/historical/: CMakeLists.txt  README.md  autoencoder_cifar10.cpp  autoencoder_mnist.cpp  cnn_imagenet.cpp  cnn_mnist.cpp  dnn_cifar10.cpp  dnn_imagenet.cpp  dnn_nci_regression.cpp  greedy_layerwise_autoencoder_imagenet.cpp  greedy_layerwise_autoencoder_mnist.cpp  greedy_layerwise_autoencoder_nci.cpp  lenet_mnist.cpp  resnet50.cpp  run_lbann_autoencoder_cifar10.sh  run_lbann_autoencoder_mnist.sh  run_lbann_cnn_mnist.sh  run_lbann_dnn_imagenet.sh  run_lbann_greedy_layerwise_autoencoder_mnist.sh  run_resnet_experiment.sh
model_zoo/jag_utils/: CMakeLists.txt  build_index.cpp  build_sample_id_mapping.cpp  check_for_duplicate_samples.cpp  check_images.cpp  compute_hydra_normalization.cpp  compute_min_max_images.cpp  compute_per_channel_image_avg_min_max.cpp  compute_pilot2_normalization.cpp  convert.cpp  convert_npz_to_conduit.cpp  detect_corruption.cpp  dump_bundle.cpp  extract_random_samples.cpp  generate_corrupt_samples.cpp  load_balance.cpp  load_bundle2raw.cpp  sample_list_reproducer.cpp  select_samples.cpp  test_conduit_hdf5.cpp  test_conduit_with_mpi.cpp  test_mpi.cpp  test_numpy_conduit_cache.cpp  test_reading_speed.cpp
model_zoo/optimizers/: opt_adam.prototext  opt_rmsprop.prototext  opt_sgd.prototext
src/: CMakeLists.txt  Elemental_extensions.cpp  base.cpp  comm.cpp  lbann_Elemental_extensions.cpp  lbann_base.cpp  lbann_comm.cpp  lbann_library.cpp  lbann_params.cpp  params.cpp
superbuild/: CMakeLists.txt  README.md
unit_test/: CMakeLists.txt  MPICatchMain.cpp  SequentialCatchMain.cpp
(+19093 files in other folders)
